--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
                 <img src="./img/avatar.jpg" alt="My Photo">
             </div>
             <div>
-                <h1>Nguyễn Hoàng Thiên Bảo</h1>
+                <h1>Lê Nguyễn Nhất Tâm</h1>
                 <p><strong>Chức vụ:</strong> Lập trình viên</p>
-                [<a href="https://github.com/ThienBao224"><strong>GitHub</strong></a>]
+                [<a href="https://github.com/L2NT/L2NT.github.io"><strong>GitHub</strong></a>]
                 [<a href="./img/CV.pdf"><strong>Resume/CV</strong> </a>]
             </div>
         </div>
         <div class="aboutme">
             <h2>Giới thiệu về tôi</h2>
             <ul>
-                <li>Mục tiêu của tôi là trở thành một kỹ sư phần mềm chuyên nghiệp và góp phần vào các giải pháp sáng tạo. Tôi luôn tìm hiểu và học hỏi các công nghệ mới nhằm cải thiện kỹ năng của mình.</li>
+                <li>Tôi đang phấn đấu để phát triển thành một kỹ sư phần mềm, luôn tìm kiếm cơ hội để mở rộng kiến thức và kỹ năng của mình. Tôi thích làm việc với các công nghệ mới và không ngừng nâng cao khả năng giải quyết vấn đề cũng như đóng góp hiệu quả cho bất kỳ đội nhóm nào mà tôi tham gia.</li>
             </ul>
         </div>
         <div class="education">
@@ -130,10 +130,7 @@
         <div class="skills">
             <h2>Kỹ năng</h2>
             <ul>
-                <li>SQL</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
+                <li>Python</li>
                 <li>Java</li>
                 <li>C++</li>
                 <li>Git</li>
@@ -143,8 +140,8 @@
         <div class="contact-info">
             <h2>Thông tin liên hệ</h2>
             <ul>
-                <li><strong>Email:</strong> nguyenhoangthienbao022@gmail.com</li>
-                <li><strong>Phone:</strong> +84 868 489 593</li>
+                <li><strong>Email:</strong> lnntam04@gmail.com</li>
+                <li><strong>Phone:</strong> +84 868 253 403</li>
                 <li><strong>Địa chỉ:</strong> Thành phố Hồ Chí Minh</li>
             </ul>
         </div>
