--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
     <div class="container">
         <div class="header">
             <div class="profile">
-                <img src="./NewFolder/avatar.jpg" alt="My Photo">
+                <img src="./img/avatar.jpg" alt="My Photo">
             </div>
             <div>
                 <h1>Lê Nguyễn Nhất Tâm</h1>
                 <p><strong>Chức vụ:</strong> Lập trình viên</p>
                 [<a href="https://github.com/L2NT/L2NT.github.io"><strong>GitHub</strong></a>]
-                [<a href="./NewFolder/CV.pdf"><strong>Resume/CV</strong> </a>]
+                [<a href="./img/CV.pdf"><strong>Resume/CV</strong> </a>]
             </div>
         </div>
         <div class="aboutme">
