--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="container">
         <div class="header">
             <div class="profile">
-                <img src="./img/avatar.jpg" alt="My Photo">
+                <img src="./img/avatar.png" alt="My Photo">
             </div>
             <div>
                 <h1>Lê Nguyễn Nhất Tâm</h1>
